<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/itemA"
            android:title="@string/share"
            app:showAsAction="never"
            android:icon="@drawable/share"/>

        <item
            android:id="@+id/itemB"
            android:title="@string/rate"
            app:showAsAction="never"
            android:icon="@drawable/rate"/>

    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/item1"
                android:title="@string/Arabic"
                app:showAsAction="never" />

            <item
                android:id="@+id/item2"
                android:title="@string/English"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>